<resources>
    <string name="app_name">Medicine tracker</string>
    
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="TYPE">
        <item>Ampoule(s)</item>
        <item>Application(s)</item>
        <item>Capsule(s)</item>
        <item>Drop(s)</item>
        <item>Injection(s)</item>
        <item>Milligramme(s)</item>
        <item>Millilitre(s)</item>
        <item>Patch(es)</item>
        <item>Piece(s)</item>
        <item>Pill(s)</item>
        <item>Puff(s)</item>
        <item>Sachet(s)</item>
        <item>Spray(s)</item>
        <item>Suppository(ies)</item>
        <item>Tablespoon(s)</item>
        <item>Tablet(s)</item>
        <item>Teaspoon(s)</item>
        <item>Unit(s)</item>
        <item>(s)</item>
        <item>Millilitre(s)</item>
        <item>Patch(es)</item>
    </string-array>

    <!--Titles-->
    <string name="login_title">Login</string>
    <string name="signup_title">Sign up</string>

    <!--Welcome messages-->
    <string name="splash_welcome_txt">Easiest way to\ntrack medicines\nAdd pills, reminders\ncaretakers and much more!</string>
    <string name="login_welcome_txt">Hello there !\nWelcome Back</string>
    <string name="signup_welcome_txt">Hello there !\nWelcome to Medicine Tracker</string>


    <!--Button labels-->
    <string name="login_btn_label">Login</string>
    <string name="signup_btn_label">Signup</string>

    <string name="login_label">" Login"</string>
    <string name="signup_label">" Signup"</string>

    <string name="login_gg_btn_label">Login with Google</string>
    <string name="signup_gg_btn_label">Signup with Google</string>

    <string name="get_started_btn_label">Get Started</string>

    <!--Edit Text hints-->
    <string name="email_address_hint">Email Address</string>
    <string name="full_name_hint">Full Name</string>
    <string name="password_hint">Password</string>


    <!--Misc texts-->
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\’t have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="divider_or">OR</string>


</resources>