<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LoginRegister.register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="gotosplashagain"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back" />
        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/containerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_margin="@dimen/container_layout_margin">

            <TextView
                android:id="@+id/signup_title"
                style="@style/LabelStyle"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/signup_title"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/signup_welcome_msg"
                style="@style/LabelStyle"
                android:layout_below="@id/signup_title"
                android:layout_marginTop="16dp"
                android:text="@string/signup_welcome_txt" />

            <EditText
                android:id="@+id/txt1"
                style="@style/EditTextStyle"
                android:layout_below="@id/signup_welcome_msg"
                android:layout_marginTop="16dp"
                android:hint="@string/full_name_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/emailid"
                style="@style/EditTextStyle"
                android:layout_below="@id/txt1"
                android:layout_marginTop="16dp"
                android:hint="@string/email_address_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                style="@style/EditTextStyle"
                android:layout_below="@id/emailid"
                android:layout_marginTop="16dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/regbtn12"
                style="@style/SolidButtonStyle"
                android:layout_width="match_parent"
                android:layout_below="@id/password"
                android:layout_marginTop="20dp"
                android:text="@string/signup_btn_label" />

            <RelativeLayout
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/regbtn12"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:layout_marginTop="8dp">

                <ProgressBar
                    android:id="@+id/reg_progress_circular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />




            </RelativeLayout>






            <RelativeLayout
                android:id="@+id/login_nav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center">

                <TextView
                    android:id="@+id/have_account"
                    style="@style/LabelStyle"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:text="@string/have_account"
                    android:textColor="@color/account"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/alreadylog"
                    style="@style/LabelStyle"
                    android:layout_toEndOf="@id/have_account"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:text="@string/login_label"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />
            </RelativeLayout>
        </RelativeLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>