<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LauncherScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_login"
            style="@style/StrokeButtonStyle"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="267dp"
            android:layout_marginBottom="80dp"
            android:background="?android:attr/selectableItemBackground"
            android:minWidth="@dimen/splash_btn_width"
            android:onClick="login"
            android:text="@string/login_btn_label"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_get_started"
            style="@style/StrokeButtonStyle"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="80dp"
            android:background="?android:attr/selectableItemBackground"
            android:minWidth="@dimen/splash_btn_width"
            android:onClick="getStarted"
            android:text="@string/get_started_btn_label"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/splashBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:src="@drawable/splash_bg" />

        <RelativeLayout
            android:id="@+id/containerLayout"
            android:layout_width="375dp"
            android:layout_height="695dp"
            android:layout_marginStart="@dimen/container_layout_margin"
            android:layout_marginTop="@dimen/container_layout_margin"
            android:layout_marginEnd="@dimen/container_layout_margin"
            android:layout_marginBottom="@dimen/container_layout_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/logomt" />

            <TextView
                style="@style/LabelStyle"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="100sp"
                android:textStyle="bold"
                android:text="@string/splash_welcome_txt" />


        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>